<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".MainActivity">

    <View android:id="@+id/middle"
        android:layout_height="0dp"
        android:layout_width="0sp"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/chakra_petch_semibold"
        android:gravity="center"
        android:text="@string/main_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_alignEnd="@id/middle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="100sp"
        android:layout_marginTop="60sp"
        android:fontFamily="@font/chakra_petch_semibold"
        android:text="@string/cur_temp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cur_temp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:layout_alignStart="@id/middle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="100sp"
        android:fontFamily="@font/chakra_petch_semibold"
        android:text="@string/fake_temp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="40sp" />
    <TextView
        android:id="@+id/always_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100sp"
        android:layout_below="@id/current_temp"
        android:layout_marginTop="110sp"
        android:fontFamily="@font/chakra_petch_semibold"
        android:gravity="center"
        android:text="@string/always_on"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enable_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_temp"
        android:layout_marginHorizontal="100sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/chakra_petch_semibold"
        android:minHeight="48dp"
        android:text="@string/enable_switch"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/current_temp"
        android:layout_marginTop="10sp"
        android:background="?android:attr/listDivider" />

    <include layout="@layout/temp_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enable_control" />
</RelativeLayout>